k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow
spec:
  ports:
  - port: 4499
    targetPort: 4499
    protocol: TCP
  selector:
    app: wisecow
  type: ClusterIP
